@@ -13,65 +13,80 @@
 What we wrote:
 
 <ul>
-<li>
-Han-Wen Nienhuys and Jan Nieuwenhuizen, <em>LilyPond, a system for
-automated music engraving</em>. Proceedings of the XIV Colloquium on
-Musical Informatics (XIV CIM 2003), Firenze, Italy, May 2003.  (<a
-href="@IMAGES@xivcim.pdf">PDF 95k</a>)
+  <li>
+    Han-Wen Nienhuys and Jan Nieuwenhuizen, <em>LilyPond, a system for
+      automated music engraving</em>. Proceedings of the XIV Colloquium on
+    Musical Informatics (XIV CIM 2003), Firenze, Italy, May 2003.  (<a
+								       href="@IMAGES@xivcim.pdf">PDF 95k</a>)
 </ul>
-	
+
 
 What others wrote:
 
 
 <dl>
-<dt>October 2004</dt>
-<dd>
-The editors of <em>Computer!Totaal</em>, a Dutch computer magazine, <a
-href="@IMAGES@computer-totaal.jpeg">describe LilyPond </a> in the
-October 2004 issue as: &ldquo;Wonderful free (open source) software
-[..] The sheet music produced by LilyPond is exceptionally pretty [..]
-a very powerful system that can do almost anything&rdquo;
-</dd>
-<dt>July, August 2004</dt>
-<dd>
-  Dave Phillips wrote an introductory article for Linux Journal <em>At
-  the sounding edge: LilyPond</em>, parts
+  <dt>August 20, 2005</dt>
+  <dd>
+    The Belgian newspaper <em>De Standaard</em> publishes an article
+    titled <em>Delen van KENNIS zonder WINSTBEJAG</em> <font
+    size=-1>(Non-profit sharing of knowlegde)</font> in its `DS2
+    bijlage'.  LilyPond is used as an example and the article is
+    interspersed with quotes from an `email interview' with Jan
+    Nieuwenhuizen.  This marks LilyPond's first appearance in
+    mainstream printed press.
 
-  <a href="http://www.linuxjournal.com/article.php?sid=7657">one</a>
-  and 
-  <a href="http://www.linuxjournal.com/article.php?sid=7719">two</a>.
-</dd>
-<dt>April 2004</dt>
-<dd>
-A French article on the LilyPond 2.2 release appeared on <a
-href="http://linuxfr.org/2004/04/08/15968.html">linuxfr.org</a>.
-</dd>      
-<dt>March 2004</dt>
-<dd>
-Chris Cannam interviewed Han-Wen Nienhuys and Jan Nieuwenhuizen on
-<a
-href="http://linuxmusician.com/index.php?option=articles&task=viewarticle&artid=10">linuxmusician.com</a>.
-This interview was also reviewed in a 
-<a href="http://slashdot.org/article.pl?sid=04/03/13/2054227&tid=">
-slashdot story</a>. 
-</dd>
+    <!-- after September 4., check 
+    http://www.standaard.be/Thema/Multimedia/
+    !-->
+    
+  </dd>
+  <dt>October 2004</dt>
+  <dd>
+    The editors of <em>Computer!Totaal</em>, a Dutch computer magazine, <a
+									   href="@IMAGES@computer-totaal.jpeg">describe LilyPond </a> in the
+    October 2004 issue as: &ldquo;Wonderful free (open source) software
+    [..] The sheet music produced by LilyPond is exceptionally pretty [..]
+    a very powerful system that can do almost anything&rdquo;
+  </dd>
+  <dt>July, August 2004</dt>
+  <dd>
+    Dave Phillips wrote an introductory article for Linux
+      Journal <em>At the sounding edge: LilyPond</em>, parts
 
-<dt>February 2004</dt>
-<dd>
-Jazz singer <a href="http://www.songbirdofswing.com/editorial_page/lilypond/">
-Gail Selkirk
-</a> writes about <em>Diving into LilyPond</em>.
-</dd>
+    <a href="http://www.linuxjournal.com/article.php?sid=7657">one</a>
+    and 
+    <a href="http://www.linuxjournal.com/article.php?sid=7719">two</a>.
+  </dd>
+  <dt>April 2004</dt>
+  <dd>
+    A French article on the LilyPond 2.2 release appeared on <a
+								href="http://linuxfr.org/2004/04/08/15968.html">linuxfr.org</a>.
+  </dd>      
+  <dt>March 2004</dt>
+  <dd>
+    Chris Cannam interviewed Han-Wen Nienhuys and Jan Nieuwenhuizen on
+    <a
+       href="http://linuxmusician.com/index.php?option=articles&task=viewarticle&artid=10">linuxmusician.com</a>.
+    This interview was also reviewed in a 
+    <a href="http://slashdot.org/article.pl?sid=04/03/13/2054227&tid=">
+      slashdot story</a>. 
+  </dd>
 
-<li>&ldquo; ...You can make lead sheets or full orchestral parts, and
-the results can be stunning&rdquo; <a
-href="http://www.computermusic.co.uk">Computer Music Special</a>,
-issue CMS06.
+  <dt>February 2004</dt>
+  <dd>
+    Jazz singer <a href="http://www.songbirdofswing.com/editorial_page/lilypond/">
+      Gail Selkirk
+    </a> writes about <em>Diving into LilyPond</em>.
+  </dd>
+
+  <li>&ldquo; ...You can make lead sheets or full orchestral parts, and
+    the results can be stunning&rdquo; <a
+					  href="http://www.computermusic.co.uk">Computer Music Special</a>,
+    issue CMS06.
 
 </ul>
-	
 
 
-	<! todo: should have slides. >
+
+<! todo: should have slides. >
 
