@@ -28,6 +28,15 @@ on one day.
 
 !-->
 
+<dt><b>Article in `De Standaard'</b> - <em>August 20, 2005</em></dt>
+<dd>
+  The Belgian newspaper <em>De Standaard</em> publishes an article
+  titled <em>Delen van KENNIS zonder WINSTBEJAG</em> <font
+  size=-1>(Non-profit sharing of knowlegde)</font> using LilyPond as
+  an example.  This marks LilyPond's first appearance in mainstream
+  printed press.
+</dd>
+
 <dt><b>LilyPond 2.7.7 is out</b> - <em>August 22, 2005</em></dt>
 
 <dd>
