@@ -1,3 +1,8 @@
+2005-08-25  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* site/about/pubs.html: 
+	* site/news.ihtml: Add article: De Standaard.
+
 2005-08-19  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* site/graphics/annotate-example-lead.png (Module): update.
